# NativeSocket

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sevixoo/nativesocket_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/sevixoo/nativesocket_test/: MainActivity.java
app/src/main/java/com/sevixoo/nativesocket_test/client/: ClientActivity.java
app/src/main/java/com/sevixoo/nativesocket_test/server/: ServerActivity.java
app/src/main/java/com/sevixoo/nativesocket_test/service/: LanService.java
app/src/main/res/layout/: activity_client.xml  activity_main.xml  activity_server.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sevixoo/nativesocket_test/: ExampleUnitTest.java
nativesocket-lib/: build.gradle
nativesocket-lib/src/main/: AndroidManifest.xml
nativesocket-lib/src/main/cpp/: CMakeLists.txt  SocketManager.cpp
nativesocket-lib/src/main/cpp/include/: AndroidDebug.h
nativesocket-lib/src/main/java/com/sevixoo/nativesocket/: SocketClient.java  SocketClientCallbackBuilder.java  SocketConnection.java  SocketException.java  SocketServer.java  SocketServerCallbackBuilder.java
nativesocket-lib/src/main/res/values/: strings.xml
